# railog

./: Cargo.toml  README.md
.github/workflows/: build_test.yml
resources/: sample_config.yml
src/: config_parser.rs  kafka_consumer.rs  main.rs  publish_message.rs  server.rs
