[package]
name = "traili"
version = "0.0.2"
authors = ["djKooks <inylove82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
meilisearch-sdk = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }

uuid = { version = "0.8", features = ["serde", "v4"] }
